syntax = "proto3";

package dataset_service_pb;

option go_package = "github.com/mlops-eval/data-dispatcher-service/src/pb";

// Dataset service definition
service DatasetService {
  // Stream batches of data continuously
  rpc StreamBatches(StreamBatchesRequest) returns (stream DataBatchLabeled);
  
  // Get a single batch of data
  rpc GetBatch(GetBatchRequest) returns (DataBatchLabeled);
  
  // Get dataset metadata
  rpc GetDatasetInfo(GetDatasetInfoRequest) returns (DatasetInfo);
  
  // Health check endpoint
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request for streaming batches
message StreamBatchesRequest {
  string dataset_name = 1;  // e.g., "mnist", "cifar10"
  int32 batch_size = 2;     // batch size for data
  bool shuffle = 3;         // whether to shuffle the data
  int32 max_batches = 4;    // optional: limit number of batches (0 = no limit)
}

// Request for getting a single batch
message GetBatchRequest {
  string dataset_name = 1;
  int32 batch_size = 2;
  int32 batch_index = 3; 
}

message DataBatchLabeled {
  bytes data = 1;
  repeated int32 labels = 2;
  int32 batch_index = 3;
  bool is_last_batch = 4;
}

message DataBatchUnlabeled {
  bytes data = 1;
  int32 batch_index = 2;
  bool is_last_batch = 3;
}

// Request for dataset information
message GetDatasetInfoRequest {
  string dataset_name = 1;
}

// Response with dataset metadata
message DatasetInfo {
  string dataset_name = 1;
  int32 total_samples = 2;
  repeated int32 sample_shape = 3;
  string data_type = 4;
  bool is_available = 5;
}

// Health check request
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  string status = 1;  // "SERVING", "NOT_SERVING", "SERVICE_UNKNOWN"
  string message = 2;
} 
